syntax = "proto3";

package note;
option go_package = "/note";

service NoteManager {
    rpc CreateNote(CreateNoteRequest) returns (CreateNoteResponse) {}
    rpc GetNoteById(GetNoteByIdRequest) returns (GetNoteByIdResponse) {}
}

message Note {
    string data = 1;
}

message CreateNoteRequest {
    int64 user_id = 1;
    Note note = 2;
}

message CreateNoteResponse {
    int64 note_id = 1;
}

message GetNoteByIdRequest {
    int64 note_id = 1;
}

message GetNoteByIdResponse {
    Note note = 1;
}
